--- a/homework-1/ДЗ 1 - Паттерны декомпозиции микросервисов.md
+++ b/homework-1/ДЗ 1 - Паттерны декомпозиции микросервисов.md
@@ -1,3 +1,5 @@
+# ДЗ: Паттерны декомпозиции микросервисов 
+
 ```
 [All Stuff, No Cruft](http://nealford.com/katas/kata?id=AllStuffNoCruft "All Stuff, No Cruft")
 
@@ -60,6 +62,8 @@ Conference organizer needs a management system for the conferences he runs for b
 
 ### Модель предметной области
 
+#### Use-case диаграмма
+
 ```plantuml
 left to right direction
 
@@ -112,6 +116,7 @@ user --> (register)
 
 ```
 
+#### ER - диаграмма
 ```plantuml
 hide circle
 skinparam linetype ortho
@@ -206,24 +211,24 @@ left to right direction
 hide circle
 skinparam linetype ortho
 
-rectangle "Conference service" as c {
+rectangle "Сервис конференций" as c {
 	entity "Конференция" as conf
 	entity "Зал" as room 
 	entity "Место проведения" as event_location 
 	entity "Стиль оформления" as theme 
 }
-rectangle "Application service" {
+rectangle "Сервис заявок" {
 	entity "Заявка на доклад" as request
 	entity "Слот в расписании" as slot 
 	entity "Доклад" as talk 
 }
-rectangle "Users service" {
+rectangle "Сервис пользователей" {
 	entity "Пользователь" as user 
 }
-rectangle "Notifications service" {
+rectangle "Сервис уведомлений" {
 	entity "Уведомление" as notification 
 }
-rectangle "Votes service" {
+rectangle "Сервис отзывов" {
 	entity "Отзыв" as vote
 }
 
@@ -243,12 +248,214 @@ user }|--o{ notification
 conf }|--o{ notification
 ```
 
+ - Сервис конференций
+ - Сервис заявок
+ - Сервис пользователей
+ - Сервис уведомлений
+ - Сервис отзывов
+
 ### Разбиение по бизнес возможностям
+
+```plantuml
+left to right direction
+
+hide circle
+skinparam linetype ortho
+
+rectangle "Сервис авторизации" {
+	rectangle "Регистрируется на сайте" as auth
+}
+
+rectangle "Сервис конференциями" {
+    rectangle "Управляет справочниками" as management
+    rectangle "Регистрируют конференцию" as reg_event
+}
+
+rectangle "Сервис заявок от участников" {
+    rectangle "Регистрируются как участники" as register_participant    
+    rectangle "Отбирают заявки" as select
+}
+
+rectangle "Сервис заявок от слушателей" {
+   rectangle "Регистрируются как слушатели" as register_listener
+}
+
+rectangle "Сервис каталога конференций" {
+   rectangle "Просматривают список конференций" as read_event
+   rectangle "Просматривают детали конференции и список участников" as details
+}
+
+rectangle "Сервис голосования" {
+    rectangle "Голосуют за участников" as vote
+}
+
+rectangle "Сервис уведомлений" {
+    rectangle "Получают уведомления" as notify
+}
+
+auth -> management
+auth -> reg_event
+reg_event -> read_event
+read_event -> register_participant
+read_event -> register_listener
+register_participant -> select
+select -> details
+register_listener -> details
+register_listener -> vote
+register_listener -> notify
+
+```
+
+ - Сервис авторизации
+ - Сервис конференциями
+ - Сервис заявок от участников
+ - Сервис заявок от слушателей
+ - Сервис каталога конференций
+ - Сервис голосования
+ - Сервис уведомлений
 
 ### Разбиение по транзакциям
 
+```plantuml
+left to right direction
 
+hide circle
+skinparam linetype ortho
 
-## Microservice canvas
+rectangle "Сервис авторизации" {
+	rectangle "Транзакция регистрации пользователя" as auth
+}
+
+rectangle "Сервис конференциями" {
+    rectangle "Транзакция заполнение тем" as management
+    rectangle "Транзакция регистрации конференции" as reg_event
+}
+
+rectangle "Сервис заявок от участников" {
+    rectangle "Транзакция регистрация участника" as register_participant    
+    rectangle "Транзакция приема заявки" as select
+    rectangle "Транзакция завершение приема заявок и отбора" as select
+    rectangle "Транзакция просмотра участников конференции" as details
+}
+
+rectangle "Сервис заявок от слушателей" {
+   rectangle "Транзакция регистрации слушателя" as register_listener
+}
+
+rectangle "Сервис каталога конференций" {
+   rectangle "Транзакция чтение списка конференций" as read_event
+}
+
+rectangle "Сервис голосования" {
+    rectangle "Транзакция голосования за участника" as vote
+}
+
+rectangle "Сервис уведомлений" {
+    rectangle "Получают уведомления" as notify
+}
+
+auth -> management
+auth -> reg_event
+reg_event -> read_event
+read_event -> register_participant
+read_event -> register_listener
+register_participant -> select
+select -> details
+register_listener -> details
+register_listener -> vote
+register_listener -> notify
+
+```
+
+ - Сервис авторизации
+ - Сервис конференциями
+ - Сервис заявок от участников
+ - Сервис заявок от слушателей
+ - Сервис каталога конференций
+ - Сервис голосования
+ - Сервис уведомлений
+
 
 ## Контракты и взаимодействия
+
+### Сервис пользователей
+
+Сервис отвечающий за регистрацию, авторизацию и управление пользователями.
+
+api:
+ - POST /user/ - Создать пользователя
+ - GET /user - Получить список пользователей
+ - GET /user/:id - Получить профиль пользователя
+ - PUT /user/:id - Изменить данные пользователя
+ - DELETE /user/:id - Удалить пользователя
+
+### Сервис конференций
+
+Сервис отвечающий за управлениями темами оформления и конференциями.
+
+api:
+ - POST /conference/ - Создать конференцию
+ - GET /conference - Получить список конференцию
+ - GET /conference/:id - Получить детали конференцию
+ - PUT /conference/:id - Изменить данные конференции
+ - DELETE /conference/:id - Пометить конференцию удаленной
+ - POST /conference/:id/applications - Управление сбором заявок
+ - POST /conference/:id/registration - Управление регистрацией на событие участников
+---
+ - POST /theme/ - Создать тему конференции
+ - GET /theme - Получить список тем конференций
+ - GET /theme/:id - Получить детали темы конференций
+ - PUT /theme/:id - Изменить данные темы конференции
+ - DELETE /theme/:id - Удалить тему конференции 
+---
+ - POST /place/ - Создать место проведения конференции
+ - GET /place - Получить список мест проведения конференций
+ - GET /place/:id - Получить детали место проведения конференций
+ - PUT /place/:id - Изменить данные место проведения конференции
+ - DELETE /place/:id - Удалить место проведения конференции
+
+Интеграции
+ - Сервер авторизации
+
+### Сервис заявок
+
+Сервис отвечающий за прием и отработку заявок на конференцию
+
+api:
+  - POST /application_report/ - Создать заявку на доклад
+  - GET /application_report?conference_id - Получить заявки конференции
+  - GET /application_report/:id - Получить детали доклада
+  - PUT /application_report/:id - Изменить доклад/назначить слот
+  - DELETE /application_report/:id - Удалить доклад
+  - POST /application_report/:id/accept - Принять заявку на доклад
+  - POST /application_report/:id/decline - Отклонить заявку на доклад
+
+Интеграции
+ - Сервер авторизации
+ - Сервис конференций
+ - Сервис уведомлений
+ - Сервис отзывов
+
+### Сервис уведомлений
+
+Сервис отправки уведомлений
+
+Обработчики событий:
+ - Сообщение на отправку
+
+Интеграции
+- Сервер авторизации
+- Сервис конференций
+- Сервис пользователей
+- Сервис отзывов
+
+
+### Сервис отзывов
+
+Сервис отвечающий за прием и отработку заявок на конференцию
+
+api:
+- POST /vote/:application_id - проголосовать за доклад
+
+Интеграции
+- Сервис заявок
